<resources>
    <string name="app_name">Ayos</string>

    <!-- Roles for Spinner -->
    <string-array name="roles">
        <item>Resident</item>
        <item>LGU</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Location">Bakakeng Sur</string>

    <!-- Dashboard / Report Info -->
    <string name="resolved_issues">0% Resolved Issues</string>
    <string name="unresolved_perc">0% Unresolved Issues</string>
    <string name="pending_reports">0 Total Pending Reports</string>
    <string name="report_desc">Pothole</string>
    <string name="report_date">Report Date</string>
    <string name="location_dashboard">Bakakeng Sur</string>
    <string name="report">Report</string>
    <string name="dashboard">Dashboard</string>
    <string name="location_icon">Location icon</string>
    <string name="report_image">Report image</string>
    <string name="submit">Submit</string>
    <string name="reports">Reports</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="review">Review</string>
    <string name="confirm">Confirm</string>
    <string name="ambiong_baguio_benguet">Ambiong, Baguio, Benguet</string>
    <string name="_09876543210">09876543210</string>
    <string name="phone_number">Phone Number</string>
    <string name="lairamea1_gmail_com">lairamea1@gmail.com</string>
    <string name="email_account">Email Account</string>
    <string name="laira_mea_lucop">Laira Mea Lucop</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="location_lgu_dashboard">Location</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="theme">Theme</string>

    <!-- lgu_profile_settings-->
    <string name="light">Light</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="settings">Settings</string>


    <string name="log_out">Log Out</string>
    <string name="daily_report">Daily Report</string>
    <string name="_1_3">1/3</string>
    <string name="total_no_of_reports">Total No. of Reports</string>
    <string name="_2">2</string>
    <string name="resident">Resident</string>
    <string name="laira_mae_lucop">Laira Mae Lucop</string>
    <string name="icon_forward_arrow">Forward Arrow</string>
    <string name="icon_edit_profile">Profile Icon</string>
    <string name="icon_settings">Settings Icon</string>
    <string name="icon_logout">Log Out Icon</string>

</resources>
